alignement de phases, retrait de différents graphes et taille fixe et responsive des graphes

--- a/src/app/module/components/module-details/module-details.component.scss
+++ b/src/app/module/components/module-details/module-details.component.scss
@@ -22,3 +22,6 @@
 .custom-day.faded {
   background-color: rgba(2, 117, 216, 0.5);
 }
+.ctext{
+  font-size: 1rem;
+}
